$Id$                       -*-text-*-


**** 1.19 [unreleased]

	Show structure of EDNS options using Perl-like syntax.

Fix rt.cpan.org #127182

	Incorrect logic can cause DNS search to emit fruitless queries.


**** 1.18 Sep 21, 2018

	Documentation revised to remove ambigous use of "answer" which
	has been used to refer to both the answer section of a packet
	and the entire reply packet received from a nameserver.

Fix rt.cpan.org #127018

	Net::DNS::ZoneFile->parse() fails if include directory specified.

Fix rt.cpan.org #127012

	DNS resolution broken when options ndots used in /etc/resolv.conf


**** 1.17 Jul 25, 2018

Fix rt.cpan.org #125890

	AXFR: 1 record per packet responses.

Fix rt.cpan.org #125889

	New NSEC3 for empty non-terminal leaves type bitmap undefined.

Fix rt.cpan.org #125882

	RDATA name compression pointer calculated incorrectly.


**** 1.16 Jul 15, 2018

Feature
	New NSEC3 encloser(), nextcloser() and wildcard() instance
	methods return closest encloser, "next closer" and putative
	wildcard names respectively.

Feature
	Add new NSEC covers() instance method.

Feature
	New NSEC typemap() instance method interrogates type list.

	IO::Socket::INET6 removed from recommended module metadata.
	IPv6 requires IO::Socket::IP which is now a core package.

	No requirement to escape @ in unquoted contiguous string.


**** 1.15 Feb 9, 2018

	GOST R 34.11-94 hash algorithm: end of life 1st Jan 2018
	per sunset clause in successor standard GOST R 34.11-2012.
	Digest::GOST removed from the recommended module metadata,
	but will still be used if available.


**** 1.14 Dec 15, 2017

Fix rt.cpan.org #123702

	'use base' should not be used in packages with several
	subpackages defined

Fix rt.cpan.org #123676

	Net::DNS::Nameserver malformed message on big axfr


**** 1.13 Oct 18, 2017

Feature IDN query support

	Queries for domain names containing non-ASCII characters are
	now possible on Unicode platforms using CPAN Net::LibIDN2


**** 1.12 Aug 18, 2017
