@@ -69,7 +69,7 @@ my @debris = qw(
 delete $optional{'Net::DNS::SEC'};	## Note: MUST NOT be installed automatically
 
 
-use constant USE_SOCKET_IP => defined eval 'use IO::Socket::IP 0.32; 1;';
+use constant USE_SOCKET_IP => defined eval 'use IO::Socket::IP 0.32; 1';
 use constant INET_FALLBACK => !USE_SOCKET_IP && eval 'require IO::Socket::INET';
 
 
@@ -232,10 +232,10 @@ sub install {
 		s|([/])[/]+|$1|g;				# remove gratuitous //s
 	}
 
-	eval 'require Net::DNS; $Net::DNS::VERSION =~ s/(\.\d)$/${1}0/;';
+	eval 'require Net::DNS; $Net::DNS::VERSION =~ s/(\.\d)$/${1}0/';
 	my @version = grep $_, ( 'version', $Net::DNS::VERSION );
 
-	my $nameregex = '\W+Net\WDNS.pm$';
+	my $nameregex = '\W+Net\W+DNS.pm$';
 	my @installed = grep $_ && m/$nameregex/io, values %INC;
 	my %occluded;
 
